class file structure

--- a/vanilla-js-gui/index.html
+++ b/vanilla-js-gui/index.html
@@ -15,6 +15,10 @@
     Iteration: <span class="controls__iteration"></span>
 </div>
 <div class="container"></div>
+<script type="text/javascript" src = "js/util.class.js"></script>
+<script type="text/javascript" src = "js/control.class.js"></script>
+<script type="text/javascript" src = "js/cell.class.js"></script>
+<script type="text/javascript" src = "js/app.class.js"></script>
 <script type="text/javascript" src = "js/index.js"></script>
 </body>
 </html>
